[build-system]
requires = ["setuptools", "cython", "numpy", "poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "cshogi"
version = "0.6.8"
license = "GPL-v3"
authors = ["Tadao Yamaoka"]
description = "A fast Python shogi library"
repository = "https://github.com/TadaoYamaoka/cshogi"
homepage = "https://github.com/TadaoYamaoka/cshogi"

packages = [{ include = "cshogi" }]
exclude = ["docs/*", "build/*", "test/*", "test_cpp/*", ".mypy_cache/*"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License (GPL)",
  "Operating System :: OS Independent",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.6"
numpy = [
  { version = "~1.26.0", python = "^3.12" },
  { version = "*", python = ">=3.8,<3.12" },
  { version = "~1.21.6", python = "=3.7" },
  { version = "~1.19.5", python = "=3.6" },
]

[tool.poetry.group.dev.dependencies]
setuptools = "^57.4.0"
cython = "0.29.22"
twine = "*"
